--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,14 @@
 page-home {
-
+    #map {
+        width: 100%;
+        height: 100%;
+    }
+    .searchbar-search-icon {
+        display:none;
+        width:0;
+        height:0;
+    }
+    .searchbar-input {
+        padding-left: 9px !important;
+    }
 }
