--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,7 @@
 page-home {
     #map {
         width: 100%;
-        height: 100%;
+        height: 330px;
     }
     .searchbar-search-icon {
         display:none;
