--- a/src/pages/routes/routes.scss
+++ b/src/pages/routes/routes.scss
@@ -3,4 +3,9 @@ page-routes {
         width: 100%;
         height: 500px;
     }
+    .lessfare {
+        background-repeat: no-repeat;
+        background-position:center;
+        background-image: url('../icons/lessfare.png');
+    }
 }
