--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -5,4 +5,17 @@ page-details {
     .legIcon{
         font-size: 30px;
     }
+    .icon-col{
+        align-self: center;
+    }
+    ion-grid {
+        background-color: lightcyan;
+    }
+    ion-row {
+        background-color: lightcyan;
+        border-bottom-left-radius: 10px;
+        border-top-left-radius: 15px;
+        border-left: 10px;
+        border-top: 10px;
+    }
 }
