--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,10 @@
 page-home {
     #map {
         width: 100%;
-        height: 330px;
+        height: 100%;
+    }
+    .menu-button{
+        float: right;
     }
     .searchbar-search-icon {
         display:none;
@@ -9,6 +12,17 @@ page-home {
         height:0;
     }
     .searchbar-input {
-        padding-left: 9px !important;
+        padding-left: 0px !important;
+    }
+    ion-item {
+        padding: 0px !important;
+        background-color: transparent !important;
+    }
+    .no-padding{
+        padding: 0px !important;
+    }
+    .limit-item {
+        width: 83%;
+        margin-left: 17%;
     }
 }
