--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,9 +1,13 @@
 page-login {
-	.loginlogo {
-		color: red;
-		font-size: 100px;
+	ion-img {
+		background-color: transparent !important;
+		size: 200px;
 	}
 	.or{
 		font-size: 40px;
 	}
+	ion-label{
+		font-size: 18px;
+	}
+
 }
