--- a/src/pages/routes/routes.scss
+++ b/src/pages/routes/routes.scss
@@ -3,9 +3,11 @@ page-routes {
         width: 100%;
         height: 500px;
     }
-    .lessfare {
-        background-repeat: no-repeat;
-        background-position:center;
-        background-image: url('../icons/lessfare.png');
+    ion-content, ion-header{
+        width: 100%; height: 87%; top: 13%; left: 0; right: 0; bottom: 0;
+    }
+    .close-button{
+        width: 83%;
+        margin-left: 17%;
     }
 }
