--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -63,6 +63,31 @@ page-details {
         display: flex;
         justify-content: center;
     }
+    .cell-6{
+        background-color: rgb(229, 226, 226); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .cell-7{
+        background-color: rgb(199, 200, 201); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .cell-8{
+        background-color: rgb(154, 154, 156); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+
     ion-img, ion-icon, ion-item{
         background-color: transparent !important;
     }
