--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -87,6 +87,54 @@ page-details {
         display: flex;
         justify-content: center;
     }
+    .cell-9{
+        background-color: rgb(229, 226, 226); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .cell-10{
+        background-color: rgb(199, 200, 201); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .cell-11{
+        background-color: rgb(154, 154, 156); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .cell-12{
+        background-color: rgb(229, 226, 226); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .cell-13{
+        background-color: rgb(199, 200, 201); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .cell-14{
+        background-color: rgb(154, 154, 156); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
 
     ion-img, ion-icon, ion-item{
         background-color: transparent !important;
