--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -13,7 +13,7 @@ page-details {
         align-self: center;
     }
     ion-grid {
-        background-color: lightcyan;
+        background-color: white;
     }
     .cell-0{
         background-color: rgb(229, 226, 226); 
@@ -32,14 +32,6 @@ page-details {
         justify-content: center;
     }
     .cell-2{
-        background-color: rgb(154, 154, 156); 
-        border-bottom-left-radius: 10px; 
-        border-top-left-radius: 15px; 
-        border-left: 10px; border-top: 10px;
-        display: flex;
-        justify-content: center;
-    }
-    .cell-3{
         background-color: rgb(229, 226, 226); 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
@@ -47,7 +39,7 @@ page-details {
         display: flex;
         justify-content: center;
     }
-    .cell-4{
+    .cell-3{
         background-color: rgb(199, 200, 201); 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
@@ -55,8 +47,16 @@ page-details {
         display: flex;
         justify-content: center;
     }
+    .cell-4{
+        background-color: rgb(229, 226, 226); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
     .cell-5{
-        background-color: rgb(154, 154, 156); 
+        background-color: rgb(199, 200, 201); 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -80,14 +80,6 @@ page-details {
         justify-content: center;
     }
     .cell-8{
-        background-color: rgb(154, 154, 156); 
-        border-bottom-left-radius: 10px; 
-        border-top-left-radius: 15px; 
-        border-left: 10px; border-top: 10px;
-        display: flex;
-        justify-content: center;
-    }
-    .cell-9{
         background-color: rgb(229, 226, 226); 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
@@ -95,7 +87,7 @@ page-details {
         display: flex;
         justify-content: center;
     }
-    .cell-10{
+    .cell-9{
         background-color: rgb(199, 200, 201); 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
@@ -103,8 +95,16 @@ page-details {
         display: flex;
         justify-content: center;
     }
+    .cell-10{
+        background-color: rgb(229, 226, 226); 
+        border-bottom-left-radius: 10px; 
+        border-top-left-radius: 15px; 
+        border-left: 10px; border-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
     .cell-11{
-        background-color: rgb(154, 154, 156); 
+        background-color: rgb(199, 200, 201); 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -128,7 +128,7 @@ page-details {
         justify-content: center;
     }
     .cell-14{
-        background-color: rgb(154, 154, 156); 
+        background-color: rgb(229, 226, 226); 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
