--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -16,10 +16,15 @@ page-details {
         align-self: center;
     }
     ion-grid {
-        background-color: white;
+        background-color:#FFE541;
     }
+    .Travel-Summary{
+        font-size: 25px;
+        font-weight: bold;
+    }
+
     .cell-0{
-        background-color: rgb(229, 226, 226); 
+        background-color: white; 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -27,7 +32,7 @@ page-details {
         justify-content: center;
     }
     .cell-1{
-        background-color: rgb(199, 200, 201); 
+        background-color: whitesmoke;
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -35,7 +40,7 @@ page-details {
         justify-content: center;
     }
     .cell-2{
-        background-color: rgb(229, 226, 226); 
+        background-color: white; 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -43,7 +48,7 @@ page-details {
         justify-content: center;
     }
     .cell-3{
-        background-color: rgb(199, 200, 201); 
+        background-color: whitesmoke;
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -51,7 +56,7 @@ page-details {
         justify-content: center;
     }
     .cell-4{
-        background-color: rgb(229, 226, 226); 
+        background-color: white; 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -59,7 +64,7 @@ page-details {
         justify-content: center;
     }
     .cell-5{
-        background-color: rgb(199, 200, 201); 
+        background-color: whitesmoke;
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -67,7 +72,7 @@ page-details {
         justify-content: center;
     }
     .cell-6{
-        background-color: rgb(229, 226, 226); 
+        background-color: white; 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -75,7 +80,7 @@ page-details {
         justify-content: center;
     }
     .cell-7{
-        background-color: rgb(199, 200, 201); 
+        background-color: whitesmoke; 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
@@ -83,7 +88,7 @@ page-details {
         justify-content: center;
     }
     .cell-8{
-        background-color: rgb(229, 226, 226); 
+        background-color: white; 
         border-bottom-left-radius: 10px; 
         border-top-left-radius: 15px; 
         border-left: 10px; border-top: 10px;
