--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,9 +10,12 @@ page-home {
         display:none;
         width:0;
         height:0;
+
     }
     .searchbar-input {
         padding-left: 0px !important;
+        background-color: #FFE541 !important;
+
     }
     ion-item {
         background-color: transparent !important;
@@ -24,17 +27,20 @@ page-home {
         width: 83%;
         margin-left: 17%;
     }
-
     .title{
         font-size: 25px;
-        background-color: rgba(66, 65, 65, 0.1);
+        background-color: transparent !important;
         font-weight: bold;
     }
     .opt:hover > div {
-        background-color:rgba(66, 65, 65, 0.1);
+        background-color:rgba(255, 221, 1, 0.4);
     }
     #results{
         width: 100%;
         height: 100%;
     }
+  
+    
+
+
 }
