--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -14,17 +14,17 @@ page-login {
 	ion-label{
 		font-size: 18px;
     background-color: transparent !important;
-    color: white;
+    
   }
   ion-item{
     background-color: transparent !important;
   }
   ion-input{
-    color: white;
+    color: teal;
   }
   p{
 		font-size: 15px;
-    color: white;
+    color: black;
   }
 }
 #custom-overlay {
