--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -39,6 +39,21 @@ page-home {
         width: 100%;
         height: 100%;
     }
+    .titleicon {
+        position: absolute;
+        width: 50%;
+        height: 40px;
+        left: 0;
+        bottom: 0;
+        text-align:center;
+    }
+    .TruFare{
+        font-weight: bold;
+        font-size: 30;
+        width: 55%;
+        height: 40px;
+        text-align:center;
+    }
   
     
 
