--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -53,9 +53,6 @@ page-home {
         width: 55%;
         height: 40px;
         text-align:center;
+        background-color: transparent !important;
     }
-  
-    
-
-
 }
